5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1664_2971.log
== TEST (2019-04-16 10:15:26) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
print(qf)
-- OUTPUT:
14365502.75713173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:46) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),Sim)
else:
	print(Nao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(qf,2),Sim)
NameError: name 'Sim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:05) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),"Sim")
else:
	print("Nao")
-- OUTPUT:
14365502.76 Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:17:11) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),"Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.127409
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76 Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81 Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:20) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),"Sim")
else:
	print("Nao")
-- OUTPUT:
14365502.76 Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:41) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),"Sim")
else:
	print(round(qf,2),"Nao")
-- OUTPUT:
14365502.76 Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:17:48) 
-- CODE:
j= float(input("qual a taxa de juros? "))
vl= float(input("qual o valor do apartamento? "))
t= 36
q0= 1500
qf= q0*(1+j)**36
if (qf>=vl):
	print(round(qf,2),"Sim")
else:
	print(round(qf,2),"Nao")
-- EXECUTION TIME:
0.210443
-- TEST CASE 1:
---- input:
0.29
125250
---- correct output:
14365502.76
Sim
---- user output:
14365502.76 Sim
-- TEST CASE 2:
---- input:
0.15
300000
---- correct output:
229727.78
Nao
---- user output:
229727.78 Nao
-- TEST CASE 3:
---- input:
0.2
150000
---- correct output:
1063202.81
Sim
---- user output:
1063202.81 Sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
